# gtl

./: .gitignore  CMakeLists.txt  build.bat  build_all.bat  build_v142_all.bat  dependency.txt  gtl.sln  move_opencv4.bat  vcpkg-configuration.json  vcpkg.json  vcpkg_add_port.bat
cmake/: GtlCommon.cmake
etc/: calc_time.py
etc/vcpkg/: clean_build_trees_dbg_rel.bat  dependency.txt  install-vcpkg.bat  move_opencv4.bat
include/gtl/: 2dMatArray.h  __lib.h  _config.h  _default.h  _lib_gtl.h  _macro.h  archive.h  base64.h  concepts.h  config_gtl.h  container_map.h  coord.h  cv_floodfill.h  dynamic.h  gtl.h  gtl.shape.h  iconv_wrapper.h  json_proxy.h  json_sync.h  lazy_profile.h  log.h  mat_gl.h  mat_helper.h  matrix.h  misc.h  mutex.h  profile.h  ptr_container.h  rand.h  reflection.h  reflection_glaze.h  sequence.h  sequence_coroutine_handle.h  sequence_map.h  sequence_tReturn.h  serial_port.h  smart_ptr_container.h  string.h  (+6 more)
interface/: gtl.ixx
lib/: gtl.x64D.lib  gtl.x64R.lib
natvis/: OpenCV.natvis  copyToMSVC2022.txt  gtl_coord.natvis
src/bench/: CMakeLists.txt  bench.cpp  bench.rc  bench.vcxproj  bench.vcxproj.filters  bench_string_codepage_conv.cpp  resource.h
src/gtl/: 2dMatArray.cpp  2dMatArray.ixx  CMakeLists.txt  HangeulCodeMapKSSM_UTF16.cpp  HangeulCodeMapUTF16_KSSM.cpp  HangeulCodeTable.cpp  HangeulCodeTable.h  archiv.ixx  archive.cpp  archive.ixx  concepts.ixx  coord.ixx  coord_trans.ixx  cv_floodfill.cpp  dllmain.cpp  dynamic.ixx  framework.h  gtl.cpp  gtl.ixx  gtl.rc  gtl.vcxproj  gtl.vcxproj.filters  icon.kra  iconv_wrapper.ixx  json_proxy.cpp  json_proxy.ixx  log.cpp  log.ixx  mat_gl.cpp  mat_helper.cpp  mat_helper.ixx  matrix.ixx  misc.ixx  mutex.ixx  pch.cpp  pch.h  profile.cpp  ptr_container.ixx  rand.ixx  reflection.ixx  (+9 more)
src/gtl/coord/: coord_point.ixx  coord_rect.ixx  coord_size.ixx  coord_srect.ixx  coord_trans.ixx
src/gtl/string/: string_convert_codepage.ixx  string_convert_codepage_kssm.ixx  string_convert_codepage_kssm_to_utf16.ixx  string_convert_codepage_utf16_to_kssm.ixx  string_convert_utf.ixx  string_misc.ixx  string_primitives.ixx  string_to_arithmetic.ixx  string_utf_char_view.ixx
src/mfc/: CMakeLists.txt  ListCtrlEd.cpp  MatHelper.cpp  MatView.cpp  ProgressDlg.cpp  TMDialog.cpp  framework.h  mfc.cpp  mfc.rc  mfc.vcxproj  mfc.vcxproj.filters  resource.h
src/qt/: CMakeLists.txt  MatBitmapArchive.cpp  ProgressDlg.cpp  ProgressDlg.ui  QCollapsibleGroupBox.cpp  QColorButton.cpp  QFileFolderBrowser.cpp  QFileFolderBrowser.ui  QGlazeModel.cpp  QPathCompleter.cpp  QRoundButton.cpp  framework.h  gtl.qt.rc  qt.cpp  qt.h  qt.vcxproj  qt.vcxproj.filters  qt_global.h  resource.h  util.cpp
src/qt/MatView/: LayeredMatView.cpp  LayeredMatView.ui  LayeredMatViewDlg.cpp  MatView.cpp  MatView.h  MatView.ui  MatViewCanvas.cpp  MatViewDlg.cpp  MatViewDlg.ui  MatViewGE.cpp  MatViewGE.ui  MatViewGECanvas.cpp  MatViewGEDlg.cpp  MatViewGEDlg.ui  MatViewGESettingsDlg.cpp  MatViewGESettingsDlg.h  MatViewGESettingsDlg.ui  MatViewGEToolbar.cpp  MatViewGEToolbar.ui  MatViewGV.cpp  MatViewGV.ui  MatViewGVCanvas.cpp  MatViewGVDlg.cpp  MatViewGVDlg.ui  MatViewGVSettingsDlg.cpp  MatViewGVSettingsDlg.h  MatViewGVSettingsDlg.ui  MatViewGVToolbar.cpp  MatViewGVToolbar.h  MatViewGVToolbar.ui  MatViewSettingsDlg.cpp  MatViewSettingsDlg.h  MatViewSettingsDlg.ui  MatViewToolbar.cpp  MatViewToolbar.h  MatViewToolbar.ui  MatViewWidget.cpp  MatViewWidget.ui  MatView_misc.cpp
src/shape/: CMakeLists.txt  canvas.cpp  canvas.ixx  color_table.ixx  dllmain.cpp  framework.h  gtl.shape.rc  resource.h  shape.cpp  shape.ixx  shape.vcxproj  shape.vcxproj.filters  shape_others.ixx  shape_primitives.ixx
src/test/: CMakeLists.txt  main.cpp  pch.h  resource.h  test.cpp  test.rc  test.vcxproj  test_archive.cpp  test_boost_ptr_container.cpp  test_coord.cpp  test_coord_trans.cpp  test_dynamic.cpp  test_json.cpp  test_json_proxy.cpp  test_lock.cpp  test_misc.cpp  test_mutex.cpp  test_reflection.cpp  test_reflection_glaze.cpp  test_sequence.cpp  test_sequence_map.cpp  test_sequence_tReturn.cpp  test_shape.cpp  test_string.cpp  test_string_codepage.cpp  test_string_primitives.cpp  test_task.cpp
src/test/ini/: lazy_profile.ini  lazy_profileU8.ini  lazy_profileW.ini
src/test/shape_test/: bridge.dxf.json  bridge.dxf.json.shape  bridge.dxf.json.txt  cube.dxf.json  cube.dxf.json.shape  cube.dxf.json.txt  diamond.dxf.json  diamond.dxf.json.shape  diamond.dxf.json.txt
src/test/stream_test/: cp1250.txt  cp1251.txt  cp1252.txt  cp949.txt  utf16BE.bom.cxx  utf16LE.bom.cxx  utf8.bom.cxx  write_line_u16.txt
src/test_qt/: CMakeLists.txt  LayeredMatViewDlg.cpp  LayeredMatViewDlg.h  LayeredMatViewDlg.ui  SeqChildDlg.cpp  SeqChildDlg.h  SeqChildDlg.ui  SeqMainDlg.cpp  SeqMainDlg.h  SeqMainDlg.ui  TestSeqDlg.cpp  TestSeqDlg.h  TestSeqDlg.ui  framework.h  main.cpp  resource.h  test_qt.cpp  test_qt.h  test_qt.rc  test_qt.ui  test_qt.vcxproj  test_qt.vcxproj.filters
src/test_sequence/: CMakeLists.txt  RCa13056  main.cpp  pch.h  resource.h  test_sequence.cpp  test_sequence.rc  test_sequence.vcxproj  test_sequence.vcxproj.filters  test_sequence_map.cpp  test_sequence_tReturn.cpp
src/test_win/: CMakeLists.txt  ChildFrm.cpp  ChildFrm.h  ClassView.cpp  ClassView.h  FileView.cpp  FileView.h  MainFrm.cpp  MainFrm.h  OutputWnd.cpp  OutputWnd.h  PropertiesWnd.cpp  PropertiesWnd.h  ViewTree.cpp  ViewTree.h  calendarbar.cpp  calendarbar.h  framework.h  resource.h  test_win.cpp  test_win.h  test_win.vcxproj  test_win.vcxproj.filters  test_winDoc.cpp  test_winDoc.h  test_winView.cpp  test_winView.h  testwin.rc
src/win/: CMakeLists.txt  EnvironmentVariable.cpp  framework.h  gtl.win.rc  resource.h  serial_port.cpp  win.cpp  win.vcxproj  win.vcxproj.filters
src/wx/: CMakeLists.txt  dllmain.cpp  framework.h  gtl.wx.rc  resource.h  util.cpp  wx.vcxproj  wx.vcxproj.filters  wxRoundButton.cpp
src/wx/MatView/: DlgMatViewOption.cpp  DlgMatViewOption.h  MatView.cpp  MatView_misc.h  wxMatView.cpp  wxMatView.fbp  wxMatView.h
test_win/: ChildFrm.cpp  resource.h  test_win.cpp  test_winView.cpp  test_winView.h  testwin.rc
(+198 files in other folders)
